Possible fix for inputs on iOS

--- a/frontend/src/scss/_config.scss
+++ b/frontend/src/scss/_config.scss
@@ -86,3 +86,7 @@ button {
 textarea {
   font-family: inherit;
 }
+
+input {
+  -webkit-appearance: none;
+}
